objects/tffa__Application__c.object
<CustomObject>
    <description>Submission can have multiple applications  based on number of products selected. An application will have product specific attributes which will eventually result into an account. Used to store account specific information like Acount Number, Routing Number, Loan Amount, Credit Limit, Vehicle Year, Vehicle make, vehicle model, as well as mortgage and home equity related information.</description>
    <fields>
        <fullName>AccPrefRetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Acc Pref Retry Count</description>
        <label>Account Preference Retry Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountOpeningStatus__c</fullName>
        <description>Account Opening Status</description>
        <inlineHelpText>This includes Customer creation, Account opening, Beneficiary creation, Update customer missing information,Account funding, Funding hold</inlineHelpText>
        <label>Account Opening Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ApplicationProcessStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountPreference__c</fullName>
        <description>This includes both OD Protection and E-Statement</description>
        <inlineHelpText>This includes both OD Protection and E-Statement</inlineHelpText>
        <label>Account Preference Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ApplicationProcessStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctOpenRetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Account Opening Retry Count</description>
        <label>Account Opening Retry Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CZAccountAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Address</description>
        <label>Account Address</label>
        <referenceTo>tffa__Address__c</referenceTo>
        <relationshipLabel>CZAccountAddress</relationshipLabel>
        <relationshipName>CZAccountAddress</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CZAccountOpeningDate__c</fullName>
        <description>Account Opening Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CZApplicationProcessingErrorMessage__c</fullName>
        <description>Account Processing Error Message</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Processing Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZBillingMode__c</fullName>
        <description>Billing Mode</description>
        <label>Billing Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BANK_BOX</fullName>
                    <label>BANK BOX</label>
                </value>
                <value>
                    <fullName>WAIVE_FEE</fullName>
                    <label>WAIVE FEE</label>
                </value>
                <value>
                    <fullName>PRINT_INVOICE</fullName>
                    <label>PRINT INVOICE</label>
                </value>
                <value>
                    <fullName>AUTO_DEBIT</fullName>
                    <label>AUTO DEBIT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZCautionCode1__c</fullName>
        <description>Program Type</description>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CautionCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZCautionCode2__c</fullName>
        <description>Additional Discount Type</description>
        <label>Additional Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CautionCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZCautionCode3__c</fullName>
        <description>Caution Code 3</description>
        <label>Caution Code 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CautionCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZCity__c</fullName>
        <description>The city of the address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZCountry__c</fullName>
        <description>Country of the address</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddressCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZInterestPayoutAccountNumber__c</fullName>
        <description>Interest Payout Account Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Payout Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZInterestPayoutCharterCode__c</fullName>
        <description>Interest Payout Charter Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Payout Charter Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZInterestPayoutRoutingNumber__c</fullName>
        <description>Interest Payout Routing Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Payout Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZInvestmentDeceasedPersonBirthDate__c</fullName>
        <description>Investment Deceased Person Birth Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deceased Person DOB</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CZInvestmentDeceasedPersonDeathDate__c</fullName>
        <description>Investment Deceased Person Death Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deceased Person DOD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CZInvestmentDeceasedPersonFirstName__c</fullName>
        <description>Investment Deceased Person First Name.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deceased Person First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZInvestmentDeceasedPersonLastName__c</fullName>
        <description>Investment Deceased Person Last Name.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deceased Person Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZInvestmentDeceasedPersonTaxIDNumber__c</fullName>
        <description>Investment Deceased Person Tax ID Number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deceased Person Tax ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZInvestmentDeceasedPersonTaxIDType__c</fullName>
        <description>Deceased Person Tax ID Type</description>
        <label>Deceased Person Tax ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SSN</fullName>
                </value>
                <value>
                    <fullName>TIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZIsDiscountForFirstYearOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Discount Applies for First Year Only</description>
        <label>Discount Applies for First Year Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CZIsFundLaterSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Fund Later Selected</description>
        <label>Is Fund Later Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CZIsLargeDollarHold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Large Dollar Hold</description>
        <label>Is Large Dollar Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CZIsODAtmProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if OD ATM is already processed</description>
        <label>Is OD Atm Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CZKYCOutcomeQueueName__c</fullName>
        <description>KYC Outcome Queue Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC Outcome Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZLine1__c</fullName>
        <description>line 1 of the address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZLine2__c</fullName>
        <description>line 2 of the address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZLoanHoldAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Loan Hold Amount</description>
        <label>Loan Hold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CZLoanHoldExpiry__c</fullName>
        <description>Loan Hold Expiry Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Hold Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CZLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location</description>
        <label>Location</label>
        <referenceTo>tffa__Location__c</referenceTo>
        <relationshipLabel>Location</relationshipLabel>
        <relationshipName>Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CZPrimaryOfficer__c</fullName>
        <description>Primary Officer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Officer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZRenewalBillingMode__c</fullName>
        <description>Renewal Billing Mode</description>
        <label>Renewal Billing Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BANK_BOX</fullName>
                    <label>BANK BOX</label>
                </value>
                <value>
                    <fullName>WAIVE_FEE</fullName>
                    <label>WAIVE FEE</label>
                </value>
                <value>
                    <fullName>PRINT_INVOICE</fullName>
                    <label>PRINT INVOICE</label>
                </value>
                <value>
                    <fullName>AUTO_DEBIT</fullName>
                    <label>AUTO DEBIT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZResolutionCertifier1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resolution Certifier 1</description>
        <label>Resolution Certifier 1</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>CZResultionCertifier1</relationshipLabel>
        <relationshipName>CZResultionCertifier1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CZResolutionCertifier2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resolution Certifier 2</description>
        <label>Resolution Certifier 2</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>CZResultionCertifier2</relationshipLabel>
        <relationshipName>CZResultionCertifier2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CZResultionCertifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resolution Certifier</description>
        <label>Resolution Certifier</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>CZResultionCertifier</relationshipLabel>
        <relationshipName>CZResultionCertifier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CZSDBDiscountReasonTxt__c</fullName>
        <description>SDB Discount Reason</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SDB Discount Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZSDBRateApplied__c</fullName>
        <description>SDB Rate Applied</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SDB Rate Applied</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZSecondaryOfficer__c</fullName>
        <description>Secondary Officer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Officer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZState__c</fullName>
        <description>A state is a geographical region of a country used for administrative or political purposes,</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZStatusCode1ExpiryDate__c</fullName>
        <description>Status Code 1 Expiry Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Code 1 Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CZStatusCode1__c</fullName>
        <description>Status Code 1</description>
        <label>Status Code 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AccountStatusCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZStatusCode2ExpiryDate__c</fullName>
        <description>Status Code 2 Expiry Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Code 2 Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CZStatusCode2__c</fullName>
        <description>Status Code 2</description>
        <label>Status Code 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AccountStatusCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZStatusCode3ExpiryDate__c</fullName>
        <description>Status Code 3 Expiry Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Code 3 Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CZStatusCode3__c</fullName>
        <description>Status Code 3</description>
        <label>Status Code 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AccountStatusCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZSuccessorCustodian__c</fullName>
        <description>Successor Custodian</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Successor Custodian</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZTINCertifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TIN Certifier</description>
        <label>TIN Certifier</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>CZTINCertifier</relationshipLabel>
        <relationshipName>CZTINCertifier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CZTitle1__c</fullName>
        <description>Title 1</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZTitle2__c</fullName>
        <description>Title 2</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZTitle3__c</fullName>
        <description>Title 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZZipCode__c</fullName>
        <description>Also known as post code , a series of numbers that forms part of an address, used to help organize post so that it can be delivered more quickly</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <description>Cost center for location</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPTDId__c</fullName>
        <description>Deposit Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposit Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DebitCardBIN__c</fullName>
        <description>Debit Card BIN Details</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the BIN pre-selected from the URL Parameter</inlineHelpText>
        <label>Debit Card BIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DebitCardIssuanceStatus__c</fullName>
        <description>Debit Card Issuance Status</description>
        <label>Debit Card Issuance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ApplicationProcessStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DebitCardIssueRetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Debit Card Issue Retry Count</description>
        <label>Debit Card Issue Retry Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCMUploadRetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>FCM Upload Retry Count</description>
        <label>FCM Upload Retry Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCMUploadStatus__c</fullName>
        <description>Status of FCM Upload</description>
        <label>FCM Upload Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>FAILURE</fullName>
                </value>
                <value>
                    <fullName>MORE_INFO</fullName>
                    <label>MORE INFO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISBranchCode__c</fullName>
        <description>Fis branch code for Location</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FIS Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestPlanCode__c</fullName>
        <description>Select if the feature is to be displayed on card and not in the details section.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>InterestPlanCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAccAlreadyOpened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if account has opened in current process submission call</description>
        <label>IsCurrentIterAccOpen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCounterOffer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if App is a counter offer Product</description>
        <label>IsCounterOffer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRoutingRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if routing and mail event needs to be triggered from batch for an application</description>
        <label>Is Routing Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDMUploadRetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>MDM Upload Retry Count</description>
        <label>MDM Upload Retry Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDMUploadStatus__c</fullName>
        <description>Status of MDM Upload</description>
        <label>MDM Upload Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>FAILURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryPartyName__c</fullName>
        <description>Name of primary Party inside the Application.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmissionName__c</fullName>
        <description>This field has the name of the submission</description>
        <formula>tffa__Submission__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubmissionName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__APR__c</fullName>
        <description>An annual percentage rate (APR) is the annual rate charged for borrowing or earned through an investment. APR is expressed as a percentage that represents the actual yearly cost of funds over the term of a loan</description>
        <label>APR</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__APY__c</fullName>
        <description>The annual percentage yield (APY) is the real rate of return earned on a savings deposit or investment taking into account the effect of compounding interest.</description>
        <label>APY</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__AbandonedRoutingDecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Decision Strategy of Routing Matrix when the application was in Abandoned status. Can be used for analysing the efficacy of the strategy during Champion/Challenger testing. e.g. does the new strategy involving new set of routing rules (based on new facts) yield better results.</description>
        <label>Abandoned Routing Decision Strategy</label>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>Abandoned Applications</relationshipLabel>
        <relationshipName>AbandonedApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__AccountNumber__c</fullName>
        <description>The final generated account number. This will be set only after the final account number is available as part of the response of an account open API call.</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Account number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AccountOpenedOn__c</fullName>
        <description>The date and time when the account was opened (in core) for the application.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account opened on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__AccountPurpose__c</fullName>
        <description>Specialised Account Purpose</description>
        <label>Account purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AccountPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AccountTitle__c</fullName>
        <description>The title of the financial account. Typically this is a name of the account owners</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Title</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ActualClosingDate__c</fullName>
        <description>Actual closing date for the mortgage. Useful to benchmark time to taken</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual closing date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ActualClosingDisclosureDate__c</fullName>
        <description>Actual date on which closing disclure was issued for the mortgage application. Useful to benchmark time to taken</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual closing disclosure date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ActualCreditDecisionDate__c</fullName>
        <description>Actual credit decision date for the mortgage application. Useful to benchmark time to taken</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual credit decision date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ActualLoanEstimateDate__c</fullName>
        <description>Actual date on which loan estimate was issued to the applicant for the mortgage application. Useful to benchmark time to taken</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual loan estimate date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__AddressPrefillSourceId__c</fullName>
        <description>The unique identifier of the source entity (party) used for prefilling the account address.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The unique identifier of the source entity (party) used for prefilling the account address.</inlineHelpText>
        <label>Address Prefill source id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AddressPrefilled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the address was prefilled using an applicant&apos;s address.</description>
        <label>Address Prefilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account address for purposes of statement etc. If Address Prefill Source Id is set, the address details are not persisted directly, only address id is persisted.</description>
        <label>Address</label>
        <referenceTo>tffa__Address__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__AdverseActionNoticeRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, a notice is sent out (via email) to the related Parties if the Application is declined.</description>
        <label>Adverse action notice required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Amount__c</fullName>
        <description>Total certificate amount captured for the certificate application</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ApprovedAmount__c</fullName>
        <description>Total amount approved against the lending application</description>
        <label>Approved amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ApprovedCreditLimit__c</fullName>
        <description>Total amount of approved credit limit for existing credit card</description>
        <label>Approved credit limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ApprovedTerm__c</fullName>
        <description>Total approved term in months for the lending application</description>
        <label>Approved term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__AutoCreditDecisionOutcome__c</fullName>
        <description>Outcome of an auto decisioning process. Since the running DecisionOutcome can be overridden, this stores the original outcome. Used for decision tracking, reporting.</description>
        <label>Auto Credit Decision outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AutoCreditDecisionRemarks__c</fullName>
        <description>A snapshot of the rule that resulted in the auto CreditDecisionOutcome. Typically required by audit.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Decision Matrix Row</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__AutoKYCDecisionOutcome__c</fullName>
        <description>Outcome of an auto decisioning process. Since the running DecisionOutcome can be overridden, this stores the original outcome. Used for decision tracking, reporting.</description>
        <label>Auto KYC Decision outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AutoKYCDecisionRemarks__c</fullName>
        <description>A snapshot of the rule that resulted in the auto KYCDecisionOutcome. Typically required by audit.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC Decision Remarks</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__BalloonAmount__c</fullName>
        <description>Indicates a final balloon payment required to fully pay off the loan.</description>
        <label>Balloon amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__BalloonIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates that a final balloon payment is required to fully pay off the loan.</description>
        <label>Balloon indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__BalloonTerm__c</fullName>
        <description>The unit of time used to define the period over which the loan matures. Used in conjunction with Loan Maturity Period Count.</description>
        <label>Balloon term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__BaseRateType__c</fullName>
        <description>Type of base interest rate charged</description>
        <label>Base rate type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__BaseRateType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Brand__c</fullName>
        <description>Brand code of the Brand for the submission if applicable</description>
        <formula>tffa__Submission__r.tffa__Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BundleCode__c</fullName>
        <description>Unique product bundle code maintained in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bundle Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>